# goalcast

./: .gitignore  README.md  next.config.js  package-lock.json  package.json  setup-antigravity-wsl.sh  tailwind.config.ts  tsconfig.json
app/: globals.css  layout.tsx  page.tsx
app/api/chat/: route.ts
app/api/fixtures/: route.ts
app/api/predict/: route.ts
app/api/premium-insight/: route.ts
app/api/premium-insight/broadcast/: route.ts
app/api/premium-insight/prepare/: route.ts
app/chat/: page.tsx
components/: MatchCard.tsx  WalletConnect.tsx
contracts/: README.md
contracts/prediction-pool/: Cargo.toml  DEPLOY.md  tx.txt
contracts/prediction-pool/artifacts/: checksums.txt  prediction_pool.wasm
contracts/prediction-pool/src/: contract.rs  error.rs  msg.rs  state.rs
lib/: cctp.ts  football.ts  injective.ts  openrouter.ts  x402.ts
lib/skills/world-cup-analyst/: SKILL.md
mcp-server/: .env.example  README.md  package-lock.json  package.json
mcp-server/src/: injective-client.ts  server.ts
scratch/: derive-address.js  test-full-tx-flow.js  test-imports.js  test-tx-broadcast.js  test-tx-prepare.js
