[package]
name = "prediction-pool"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = "z"
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = "abort"
overflow-checks = true

[features]
# for quicker tests, cargo test --lib
library = []

[dependencies]
cosmwasm-schema = "1.5.5"
cosmwasm-std = "1.5.5"
cw-storage-plus = "1.2.0"
cw2 = "1.1.2"
schemars = "0.8.16"
serde = { version = "1.0.197", default-features = false, features = ["derive"] }
thiserror = "1.0.58"

[dev-dependencies]
cw-multi-test = "0.20.1"
